# alsaplayer

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  ChangeLog.0.99.82  ChangeLog.old  Dockerfile  INSTALL  Makefile.am  README.SVN  README.md  TODO  Updated.: ru.po  alsaplayer.1.in  alsaplayer.pc.in  alsaplayer.spec.in  autogen.sh  bootstrap  c  configure.ac
alsaplayer/: .cvsignore  AUTHORS  AlsaNode.h  AlsaPlayer.h  AlsaSubscriber.h  COPYING  ChangeLog  CorePlayer.h  DONATIONS  Effects.h  INSTALL  Makefile.am  Playlist.h  README  README.CVS  SampleBuffer.h  TODO  acconfig.h  acinclude.m4  aclocal.m4  alsaplayer-config.in  alsaplayer.1.in  alsaplayer.pc.in  alsaplayer.spec.in  alsaplayer_convolve.h  alsaplayer_error.h  bootstrap  config.h.in  configure  configure.ac  configure.in  control.h  input_plugin.h  interface_plugin.h  old_playlist.h  output_plugin.h  prefs.h  reader.h  scope_config.h  scope_plugin.h  (+2 more)
alsaplayer/alsaplayer/: AlsaNode.h  AlsaPlayer.h  AlsaSubscriber.h  CorePlayer.h  Effects.h  Makefile.am  Playlist.h  SampleBuffer.h  alsaplayer_convolve.h  alsaplayer_error.h  alsaplayer_fft.h  control.h  cpp_utilities.h  input_plugin.h  interface_plugin.h  object.h  output_plugin.h  playitem.h  playlist.h  prefs.h  reader.h  scope_config.h  scope_plugin.h  utilities.h
alsaplayer/app/: .cvsignore  AlsaNode.cpp  AlsaSubscriber.cpp  ControlSocket.cpp  CorePlayer.cpp  Effects.cpp  Main.cpp  Makefile.am  Playlist.cpp  SampleBuffer.cpp  convolve.c  fft.c  object.c  playitem.c  playlist.c  prefs.c  reader.cpp  reverbst.cpp  utilities.c  utilities.cpp
alsaplayer/docs/: .cvsignore  Makefile.am  TODO  donations.txt  reference.doxygen.in  sockmon.txt
alsaplayer/examples/: .cvsignore  Makefile.am  Makefile.ap-control  README.ap-control  README.examples  add.c  add_and_play.c  ap-control.c  clear.c  relative.c  seek.c  sort.c  speed.c  time.c
alsaplayer/extra/: Makefile.am  README  alsaplayer-alsaplayer.desktop  alsaplayer.desktop
alsaplayer/include/: AlsaNode.h  AlsaPlayer.h  AlsaSubscriber.h  ControlSocket.h  CorePlayer.h  Effects.h  Makefile.am  Playlist.h  SampleBuffer.h  alsaplayer_error.h  alsaplayer_fft.h  cpp_utilities.h  error.h  fft.h  input_plugin.h  interface_plugin.h  output_plugin.h  prefs.h  scope_config.h  scope_plugin.h  utilities.h
alsaplayer/input/: Makefile.am
alsaplayer/input/audiofile/: Makefile.am  audiofile_engine.c  libaf.la
alsaplayer/input/cdda/: Makefile.am  cdda.h  cdda_engine.c  cdda_engine.cpp
alsaplayer/input/flac/: FlacEngine.cpp  FlacEngine.h  FlacFile.cpp  FlacFile.h  FlacId3Tag.h  FlacId3tagTag.cpp  FlacId3v1Tag.cpp  FlacMetadataTag.cpp  FlacMetadataTag.h  FlacPlugin.cpp  FlacSeekableStream.cpp  FlacSeekableStream.h  FlacStream.cpp  FlacStream.h  FlacTag.cpp  FlacTag.h  Makefile.am  OggFlacStream.cpp  OggFlacStream.h
alsaplayer/input/mad/: .cvsignore  Makefile.am  bit.c  bit.h  fixed.c  fixed.h  frame.c  frame.h  global.h  huffman.c  huffman.h  layer12.c  layer12.h  layer3.c  layer3.h  mad.h  mad_engine.c  mad_engine.cpp  mad_engine2.c  stream.c  stream.h  synth.c  synth.h  timer.c  timer.h  xing.c  xing.h
alsaplayer/input/mikmod/: Makefile.am  drv_alsaplayer.c  mikmod_engine.c
alsaplayer/input/mpg123/: Makefile.am  audio.h  common.c  common.h  dct64.c  dct64_i386.c  decode.c  decode_2to1.c  decode_4to1.c  decode_i386.c  decode_i586.s  decode_ntom.c  equalizer.c  genre.h  getbits.c  getbits.h  httpget.c  huffman.h  l2tables.h  layer1.c  layer2.c  layer3.c  mpg123.h  mpg123_engine.c  mpg123_engine.h  readers.c  tabinit.c
alsaplayer/input/sndfile/: Makefile.am  sndfile_engine.c
alsaplayer/input/vorbis/: Makefile.am  vorbis_engine.c  vorbis_engine.cpp
alsaplayer/input/wav/: Makefile.am  formats.h  wav_engine.c
alsaplayer/interface/: .cvsignore  Makefile.am
alsaplayer/interface/cli/: Makefile.am  cli.cpp
alsaplayer/interface/daemon/: Makefile.am  daemon.cpp
alsaplayer/interface/gtk/: EffectsWindow.cpp  Makefile.am  PlaylistWindow.cpp  PlaylistWindow.h  ScopesWindow.cpp  ScopesWindow.h  gladesrc.cpp  gtk.cpp  gtk_interface.cpp  gtk_interface.h  libdefault.la  support.cpp
alsaplayer/interface/gtk2/: AboutWindow.cpp  AboutWindow.h  (+27 more)
alsaplayer/intl/: AlsaPlayer.README
alsaplayer/libalsaplayer/: Makefile.am  ap_string.c  ap_string.h  control.h  external.cpp  message.c  message.h  packet.h
alsaplayer/m4/: Makefile.am  add_cflags.m4  add_cxxflags.m4  audiofile.m4  libmikmod.m4  libtool.m4  ogg.m4  qt.m4  vorbis.m4
alsaplayer/output/: Makefile.am
alsaplayer/po/: LINGUAS  alsaplayer.pot  de.gmo  de.po  en_GB.po  fr.gmo  fr.po  pl.gmo  pl.po  sv.gmo  sv.po
alsaplayer/reader/: Makefile.am
alsaplayer/scopes/: .cvsignore  Makefile.am
alsaplayer/scopes2/: Makefile.in
attic/midi/: Makefile.am  autocfg.c  b_out.c  bootstrap  celeste_e.c  cfg.l  chorus_e.c  common.c  common.h  configure.ac  controls.c  controls.h  dumb_a.c  effects.h  filter.c  gtim.h  instrum.h  midi_engine.c  midi_in.1  output.c  pcmap.c  playmidi.h  readmidi.c  readsbk.c  resample.h  reverb_e.c  sbk.h  sf2cfg.c  sflayer.h  sndfont.c  tables.c
docs/: Makefile.am  reference.doxygen.in  wishlist.txt
extra/: Makefile.am  README  alsaplayer.desktop  desert.theme
fftscope/: .cvsignore  AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  bootstrap  configure.ac  fftscope.c
fftscope/gtk2/: ChangeLog  README  configure.ac  fftscope.c
input/cdda/: Makefile.am  cdda.h  cdda_engine.c
input/mikmod/: Makefile.am  drv_alsaplayer.c  mikmod_engine.c
interface/daemon/: Makefile.am  daemon.cpp
midi/: .cvsignore  AUTHORS  COPYING  ChangeLog  DESIGN  Makefile.am  PC42b.h  README  README.CVS  autocfg.c  b_out.c  celeste_e.c  cfg.c  cfg.l  chorus_e.c  common.c  common.h  configure.ac  controls.c  controls.h  dumb_a.c  dumb_c.c  effects.c  effects.h  fffload.c  filter.c  filter.h  gtim.h  instrum.c  instrum.h  md.h  midi_engine.c  midi_in.1  mix.c  mix.h  output.c  output.h  pcmap.c  phaser_e.c  playmidi.c  (+19 more)
midi/timidity/: Makefile.am  PersonalCopy  README  drums  piano+guitar  timidity.cfg  www.personalcopy.html
output/alsa/: Makefile.am  alsa.c
(+415 files in other folders)
