AUTOMAKE_OPTIONS = foreign
SUBDIRS = po libalsaplayer interface output input app alsaplayer extra docs \
	examples m4 reader scopes2

EXTRA_DIST = config.rpath autogen.sh alsaplayer.spec

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = alsaplayer.pc

man_MANS = alsaplayer.1

ACLOCAL_AMFLAGS = -I m4
