AUTOMAKE_OPTIONS = foreign
SUBDIRS = intl po interface output input app alsaplayer extra docs \
	libalsaplayer examples m4 reader scopes2

EXTRA_DIST = config.rpath  bootstrap alsaplayer.spec

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = alsaplayer.pc

man_MANS = alsaplayer.1

ACLOCAL_AMFLAGS = -I m4
