EXTRA_DIST = input_plugin.h output_plugin.h scope_plugin.h SampleBuffer.h \
	 scope_config.h alsaplayer_convolve.h alsaplayer_fft.h utilities.h \
	 interface_plugin.h stream_info.h CorePlayer.h Playlist.h AlsaNode.h \
	 AlsaSubscriber.h Effects.h alsaplayer_error.h AlsaPlayer.h prefs.h \
	 control.h reader.h object.h playitem.h playlist.h

alsaplayerincludedir = $(includedir)/alsaplayer

alsaplayerinclude_HEADERS = input_plugin.h output_plugin.h scope_plugin.h \
	interface_plugin.h stream_info.h CorePlayer.h Playlist.h SampleBuffer.h AlsaNode.h \
	Effects.h utilities.h alsaplayer_error.h AlsaSubscriber.h \
	prefs.h AlsaPlayer.h control.h reader.h
