EXTRA_DIST = input_plugin.h output_plugin.h scope_plugin.h SampleBuffer.h \
			 scope_config.h convolve.h fft.h utilities.h cpp_utilities.h \
			 interface_plugin.h CorePlayer.h Playlist.h AlsaNode.h \
			 AlsaSubscriber.h Effects.h error.h AlsaPlayer.h

alsaplayerincludedir = $(includedir)/alsaplayer

alsaplayerinclude_HEADERS = input_plugin.h output_plugin.h scope_plugin.h
