EXTRA_DIST = input_plugin.h output_plugin.h scope_plugin.h SampleBuffer.h \
			 scope_config.h convolve.h fft.h utilities.h cpp_utilities.h \
			 interface_plugin.h CorePlayer.h Playlist.h AlsaNode.h \
			 AlsaSubscriber.h Effects.h alsaplayer_error.h AlsaPlayer.h prefs.h

alsaplayerincludedir = $(includedir)/alsaplayer

alsaplayerinclude_HEADERS = input_plugin.h output_plugin.h scope_plugin.h \
	interface_plugin.h CorePlayer.h Playlist.h SampleBuffer.h AlsaNode.h \
	Effects.h cpp_utilities.h utilities.h AlsaSubscriber.h
